include/gpac/filters.h


typedef struct __gf_filter_session GF_FilterSession;
typedef struct __gf_filter GF_Filter;
typedef struct __gf_filter_pid GF_FilterPid;
typedef struct __gf_filter_pck GF_FilterPacket;
typedef union __gf_filter_event GF_FilterEvent;
typedef struct __gf_prop_val GF_PropertyValue;
typedef struct __gf_prop_entry GF_PropertyEntry;
typedef enum
{
	GF_FS_SCHEDULER_LOCK_FREE=0,
	GF_FS_SCHEDULER_LOCK,
	GF_FS_SCHEDULER_LOCK_FREE_X,
	GF_FS_SCHEDULER_LOCK_FORCE,
	GF_FS_SCHEDULER_DIRECT
} GF_FilterSchedulerType;
#define GF_FS_FLAG_LOAD_META	1<<1
#define GF_FS_FLAG_NO_BLOCKING	1<<2
#define GF_FS_FLAG_NO_GRAPH_CACHE	1<<3
#define GF_FS_FLAG_NO_MAIN_THREAD	1<<4
#define GF_FS_FLAG_NO_REGULATION	1<<5
#define GF_FS_FLAG_NO_PROBE	(1<<6)
#define GF_FS_FLAG_NO_REASSIGN	(1<<7)
#define GF_FS_FLAG_PRINT_CONNECTIONS	(1<<8)
#define GF_FS_FLAG_NO_ARG_CHECK	(1<<9)
#define GF_FS_FLAG_NO_RESERVOIR (1<<10)
#define GF_FS_FLAG_FULL_LINK (1<<11)
typedef enum
{
	GF_FS_STATS_FILTER_UNKNOWN,
	GF_FS_STATS_FILTER_RAWIN,
	GF_FS_STATS_FILTER_DEMUX,
	GF_FS_STATS_FILTER_DECODE,
	GF_FS_STATS_FILTER_ENCODE,
	GF_FS_STATS_FILTER_MUX,
	GF_FS_STATS_FILTER_RAWOUT,
	GF_FS_STATS_FILTER_MEDIA_SINK,
	GF_FS_STATS_FILTER_MEDIA_SOURCE,
} GF_FSFilterType;
typedef struct
{
	const GF_Filter *filter;
	const GF_Filter *filter_alias;
	u64 nb_tasks_done;
	u64 nb_pck_processed;
	u64 nb_bytes_processed;
	u64 nb_pck_sent;
	u64 nb_hw_pck_sent;
	u32 nb_errors;
	u64 nb_bytes_sent;
	u64 time_process;
	s32 percent;
	const char *status;
	Bool report_updated;
	const char *name;
	const char *reg_name;
	const char *filter_id;
	Bool done;
	u32 nb_pid_in;
	u64 nb_in_pck;
	u32 nb_pid_out;
	u64 nb_out_pck;
	Bool in_eos;
	GF_FSFilterType type;
	u32 stream_type;
	u32 codecid;
	GF_Fraction64 last_ts_sent;
	GF_Fraction64 last_ts_drop;
} GF_FilterStats;
typedef enum
{
	GF_PROP_FORBIDEN=0,
	GF_PROP_SINT,
	GF_PROP_UINT,
	GF_PROP_LSINT,
	GF_PROP_LUINT,
	GF_PROP_BOOL,
	GF_PROP_FRACTION,
	GF_PROP_FRACTION64,
	GF_PROP_FLOAT,
	GF_PROP_DOUBLE,
	GF_PROP_VEC2I,
	GF_PROP_VEC2,
	GF_PROP_VEC3I,
	GF_PROP_VEC3,
	GF_PROP_VEC4I,
	GF_PROP_VEC4,
	GF_PROP_PIXFMT,
	GF_PROP_PCMFMT,
	GF_PROP_STRING,
	GF_PROP_STRING_NO_COPY,
	GF_PROP_DATA,
	GF_PROP_NAME,
	GF_PROP_DATA_NO_COPY,
	GF_PROP_CONST_DATA,
	GF_PROP_POINTER,
	GF_PROP_STRING_LIST,
	GF_PROP_UINT_LIST,
	GF_PROP_SINT_LIST,
	GF_PROP_VEC2I_LIST,
	GF_PROP_LAST_DEFINED,
} GF_PropType;
typedef struct
{
	u8 *ptr;
	u32 size;
} GF_PropData;
typedef struct
{
	s32 x;
	s32 y;
} GF_PropVec2i;
typedef struct
{
	Double x;
	Double y;
} GF_PropVec2;
typedef struct
{
	s32 x;
	s32 y;
	s32 z;
} GF_PropVec3i;
typedef struct
{
	Double x;
	Double y;
	Double z;
} GF_PropVec3;
typedef struct
{
	s32 x;
	s32 y;
	s32 z;
	s32 w;
} GF_PropVec4i;
typedef struct
{
	Double x;
	Double y;
	Double z;
	Double w;
} GF_PropVec4;
typedef struct
{
	u32 *vals;
	u32 nb_items;
} GF_PropUIntList;
typedef struct
{
	s32 *vals;
	u32 nb_items;
} GF_PropIntList;
typedef struct
{
	GF_PropVec2i *vals;
	u32 nb_items;
} GF_PropVec2iList;
struct __gf_prop_val
{
	GF_PropType type;
	union {
		u64 longuint;
		s64 longsint;
		s32 sint;
		u32 uint;
		Bool boolean;
		GF_Fraction frac;
		GF_Fraction64 lfrac;
		Fixed fnumber;
		Double number;
		GF_PropVec2i vec2i;
		GF_PropVec2 vec2;
		GF_PropVec3i vec3i;
		GF_PropVec3 vec3;
		GF_PropVec4i vec4i;
		GF_PropVec4 vec4;
		GF_PropData data;
		char *string;
		void *ptr;
		GF_List *string_list;
		GF_PropUIntList uint_list;
		GF_PropIntList sint_list;
		GF_PropVec2iList v2i_list;
	} value;
};
const char *gf_props_get_type_name(GF_PropType type);
typedef enum
{
	GF_FEVT_PLAY = 1,
	GF_FEVT_SET_SPEED,
	GF_FEVT_STOP,
	GF_FEVT_PAUSE,
	GF_FEVT_RESUME,
	GF_FEVT_SOURCE_SEEK,
	GF_FEVT_SOURCE_SWITCH,
	GF_FEVT_SEGMENT_SIZE,
	GF_FEVT_ATTACH_SCENE,
	GF_FEVT_RESET_SCENE,
	GF_FEVT_QUALITY_SWITCH,
	GF_FEVT_VISIBILITY_HINT,
	GF_FEVT_INFO_UPDATE,
	GF_FEVT_BUFFER_REQ,
	GF_FEVT_CAPS_CHANGE,
	GF_FEVT_CONNECT_FAIL,
	GF_FEVT_USER,
	GF_FEVT_PLAY_HINT,
	GF_FEVT_FILE_DELETE,
} GF_FEventType;
typedef struct
{
	FILTER_EVENT_BASE
} GF_FEVT_Base;
typedef struct
{
	FILTER_EVENT_BASE
	Double start_range, end_range;
	Double speed;
	u32 from_pck;
	u8 hw_buffer_reset;
	u8 initial_broadcast_play;
	u8 timestamp_based;
	u8 full_file_only;
	u8 forced_dash_segment_switch;
	u8 drop_non_ref;
	u8 no_byterange_forward;
} GF_FEVT_Play;
typedef struct
{
	FILTER_EVENT_BASE
	u64 start_offset;
	u64 end_offset;
	const char *source_switch;
	u8 previous_is_init_segment;
	u8 skip_cache_expiration;
	u32 hint_block_size;
} GF_FEVT_SourceSeek;
typedef struct
{
	FILTER_EVENT_BASE
	const char *seg_url;
	Bool is_init;
	u64 media_range_start;
	u64 media_range_end;
	u64 idx_range_start;
	u64 idx_range_end;
} GF_FEVT_SegmentSize;
typedef struct
{
	FILTER_EVENT_BASE
	void *object_manager;
} GF_FEVT_AttachScene;
typedef struct
{
	FILTER_EVENT_BASE
	Bool up;
	u32 dependent_group_index;
	s32 q_idx;
	u32 set_tile_mode_plus_one;
	u32 quality_degradation;
} GF_FEVT_QualitySwitch;
typedef struct
{
	FILTER_EVENT_BASE
	GF_Event event;
} GF_FEVT_Event;
typedef struct
{
	FILTER_EVENT_BASE
	const char *url;
} GF_FEVT_FileDelete;
typedef struct
{
	FILTER_EVENT_BASE
	u32 min_x, max_x, min_y, max_y;
	Bool is_gaze;
} GF_FEVT_VisibililityHint;
typedef struct
{
	FILTER_EVENT_BASE
	u32 max_buffer_us;
	u32 max_playout_us;
	u32 min_playout_us;
	Bool pid_only;
} GF_FEVT_BufferRequirement;
union __gf_filter_event
{
	GF_FEVT_Base base;
	GF_FEVT_Play play;
	GF_FEVT_SourceSeek seek;
	GF_FEVT_AttachScene attach_scene;
	GF_FEVT_Event user_event;
	GF_FEVT_QualitySwitch quality_switch;
	GF_FEVT_VisibililityHint visibility_hint;
	GF_FEVT_BufferRequirement buffer_req;
	GF_FEVT_SegmentSize seg_size;
	GF_FEVT_FileDelete file_del;
};
typedef enum
{
	GF_FS_ARG_HINT_NORMAL = 0,
	GF_FS_ARG_HINT_ADVANCED = 1<<1,
	GF_FS_ARG_HINT_EXPERT = 1<<2,
	GF_FS_ARG_HINT_HIDE = 1<<3,
	GF_FS_ARG_UPDATE = 1<<4,
	GF_FS_ARG_META = 1<<5,
	GF_FS_ARG_META_ALLOC = 1<<6,
	GF_FS_ARG_SINK_ALIAS = 1<<7,
} GF_FSArgumentFlags;
enum
{
	GF_CAPFLAG_IN_BUNDLE = 1,
	GF_CAPFLAG_INPUT = 1<<1,
	GF_CAPFLAG_OUTPUT = 1<<2,
	GF_CAPFLAG_EXCLUDED = 1<<3,
	GF_CAPFLAG_LOADED_FILTER = 1<<4,
	GF_CAPFLAG_STATIC = 1<<5,
	GF_CAPFLAG_OPTIONAL = 1<<6,
};