share/python/libgpac.py

#
#          GPAC - Multimedia Framework C SDK
#
#          Authors: Jean Le Feuvre
#          Copyright (c) Telecom Paris 2020
#                  All rights reserved
#
#  Python ctypes bindings for GPAC (core initialization and filters API only)
#
#  GPAC is free software; you can redistribute it and/or modify
#  it under the terfsess of the GNU Lesser General Public License as published by
#  the Free Software Foundation; either version 2, or (at your option)
#  any later version.
#
#  GPAC is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public
#  License along with this library; see the file COPYING.  If not, write to
#  the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
#


#
#   This is an initial work and more bindings might be needed, feel free to contribute/PR on https://github.com/gpac/gpac
#
#  These bindings allow:
#   - initializing libgpac, setting global arguments for the lib
#   - creation, running and destruction of a filter session in blocking mode or non-blocking mode
#   - inspection of filters in a session
#   - user tasks scheduling
#   - Creation of custom filters in Python
#


from ctypes import *
import datetime
import types

#
# Type definitions
#

GF_FilterSession = c_void_p
GF_Filter = c_void_p
GF_FilterPid = c_void_p
GF_FilterPacket = c_void_p
GF_PropertyEntry = c_void_p


class GF_Fraction(Structure):
    _fields_ = [ ("num", c_int), ("den", c_uint)]
    def __str__(self):
        return str(self.num)+'/' + str(self.den)

class GF_Fraction64(Structure):
    _fields_ = [("num", c_longlong), ("den", c_ulonglong)]
    def __str__(self):
        return str(self.num)+'/' + str(self.den)

class GF_FilterStats(Structure):
    pass
GF_FilterStats._fields_ = [
    ("filter", GF_Filter),
    ("filter_alias", GF_Filter),
    ("nb_tasks_done", c_ulonglong),
    ("nb_pck_processed", c_ulonglong),
    ("nb_bytes_processed", c_ulonglong),
    ("nb_pck_sent", c_ulonglong),
    ("nb_hw_pck_sent", c_ulonglong),
    ("nb_errors", c_uint),
    ("nb_bytes_sent", c_ulonglong),
    ("time_process", c_ulonglong),
    ("percent", c_int),
    ("status", c_char_p),
    ("report_updated", c_bool),
    ("name", c_char_p),
    ("reg_name", c_char_p),
    ("filter_id", c_char_p),
    ("done", c_bool),
    ("nb_pid_in", c_uint),
    ("nb_in_pck", c_ulonglong),
    ("nb_pid_out", c_uint),
    ("nb_out_pck", c_ulonglong),
    ("in_eos", c_bool),
    ("type", c_int),
    ("stream_type", c_int),
    ("codecid", c_int),
    ("last_ts_sent", GF_Fraction64),
    ("last_ts_drop", GF_Fraction64)
]

class GF_FilterArg(Structure):
    _fields_ = [
        ("name", c_char_p),
        ("reserved", c_int),
        ("description", c_char_p),
        ("type", c_int),
        ("default", c_char_p),
        ("min_max_enum", c_char_p),
        ("flags", c_uint)
    ]
    def __str__(self):
        res = '- ' + self.name.decode('utf-8') + ' (' + _libgpac.gf_props_get_type_name(self.type).decode('utf-8') + '): ' + self.description.decode('utf-8')
        if self.default or self.min_max_enum:
            res += ' ('
            if self.default:
                res += 'default: ' + self.default.decode('utf-8')
            if self.min_max_enum:
                res += ' min_max_enum: ' + self.min_max_enum.decode('utf-8')
            res += ')'
        return res

class GF_PropVec2i(Structure):
    _fields_ = [("x", c_int), ("y", c_int)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)

class GF_PropVec2(Structure):
    _fields_ = [("x", c_double),("y", c_double)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)

class GF_PropVec3i(Structure):
    _fields_ = [("x", c_int), ("y", c_int), ("z", c_int)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)+'x' + str(self.z)

class GF_PropVec3(Structure):
    _fields_ = [ ("x", c_double), ("y", c_double), ("z", c_double)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)+'x' + str(self.z)

class GF_PropVec4i(Structure):
    _fields_ = [("x", c_int), ("y", c_int), ("z", c_int), ("w", c_int)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)+'x' + str(self.z)+'x' + str(self.w)

class GF_PropVec4(Structure):
    _fields_ = [("x", c_double), ("y", c_double), ("z", c_double), ("w", c_double)]
    def __str__(self):
        return str(self.x)+'x' + str(self.y)+'x' + str(self.z)+'x' + str(self.w)

class GF_PropData(Structure):
    _fields_ = [("ptr", c_void_p), ("size", c_uint)]
    def __str__(self):
        return 'data,size:'+str(self.size)

class GF_PropUIntList(Structure):
    _fields_ = [("vals", POINTER(c_uint)), ("nb_items", c_uint)]
    def __str__(self):
        res=''
        for i in range(self.nb_items):
            if i:
                res += ','
            res += str(self.vals[i])
        return res

class GF_PropIntList(Structure):
    _fields_ = [("vals", POINTER(c_int)), ("nb_items", c_uint)]
    def __str__(self):
        res=''
        for i in range(self.nb_items):
            if i:
                res += ','
            res += str(self.vals[i])
        return res

class GF_PropVec2iList(Structure):
    _fields_ = [("vals", POINTER(GF_PropVec2i)), ("nb_items", c_uint)]
    def __str__(self):
        res=''
        for i in range(self.nb_items):
            if i:
                res += ','
            res += str(self.vals[i].x) + 'x' + str(self.vals[i].y)
        return res

class GF_PropertyValueUnion(Union):
    pass
GF_PropertyValueUnion._fields_ = [
    ("longuint", c_ulonglong),
    ("longsint", c_longlong),
    ("sint", c_int),
    ("uint", c_uint),
    ("boolean", c_bool),
    ("frac", GF_Fraction),
    ("lfrac", GF_Fraction64),
    ("fnumber", c_float),
    ("number", c_double),
    ("vec2i", GF_PropVec2i),
    ("vec2", GF_PropVec2),
    ("vec3i", GF_PropVec3i),
    ("vec3", GF_PropVec3),
    ("vec4i", GF_PropVec3i),
    ("vec4", GF_PropVec3),
    ("data", GF_PropData),
    ("string", c_char_p),
    ("ptr", c_void_p),
    ("uint_list", GF_PropUIntList),
    ("int_list", GF_PropIntList),
    ("v2i_list", GF_PropVec2iList)
    #todo, map string list ...
]

class GF_PropertyValue(Structure):
    pass
GF_PropertyValue._fields_ = [
    ("type", c_uint),
    ("value", GF_PropertyValueUnion)
]


class GF_FEVT_Base(Structure):
    _fields_ =  [("type", c_uint), ("on_pid", GF_FilterPid)]

class GF_FEVT_Play(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("start_range", c_double),
        ("end_range", c_double),
        ("speed", c_double),
        ("from_pck", c_uint),
        ("hw_buffer_reset", c_ubyte),
        ("initial_broadcast_play", c_ubyte),
        ("timestamp_based", c_ubyte),
        ("full_file_only", c_ubyte),
        ("forced_dash_segment_switch", c_ubyte),
        ("drop_non_ref", c_ubyte),
        ("no_byterange_forward", c_ubyte)
    ]

class GF_FEVT_SourceSeek(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("start_offset", c_ulonglong),
        ("end_offset", c_ulonglong),
        ("source_switch", c_char_p),
        ("previous_is_init_segment", c_ubyte),
        ("skip_cache_expiration", c_ubyte),
        ("hint_block_size", c_uint)
    ]

class GF_FEVT_SegmentSize(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("seg_url", c_char_p),
        ("is_init", c_bool),
        ("media_range_start", c_ulonglong),
        ("media_range_end", c_ulonglong),
        ("idx_range_start", c_ulonglong),
        ("idx_range_end", c_ulonglong)
    ]


class GF_FEVT_AttachScene(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("odm", c_void_p)
    ]

class GF_FEVT_QualitySwitch(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("up", c_bool),
        ("dependent_group_index", c_uint),
        ("q_idx", c_int),
        ("set_tile_mode_plus_one", c_uint),
        ("quality_degradation", c_uint)
    ]

#TODO GF_FEVT_Event;

class GF_FEVT_FileDelete(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("url", c_char_p)
    ]

class GF_FEVT_VisibililityHint(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("min_x", c_uint),
        ("max_x", c_uint),
        ("min_y", c_uint),
        ("max_y", c_uint),
        ("is_gaze", c_bool)
    ]

class GF_FEVT_BufferRequirement(Structure):
    _fields_ =  [
        ("type", c_uint),
        ("on_pid", GF_FilterPid),
        ("max_buffer_us", c_uint),
        ("max_playout_us", c_uint),
        ("min_playout_us", c_uint),
        ("pid_only", c_bool)
    ]

class GF_FilterEvent(Union):
    def __init__(self, type=0):
        self.base.type = type

    _fields_ =  [
        ("base", GF_FEVT_Base),
        ("play", GF_FEVT_Play),
        ("seek", GF_FEVT_SourceSeek),
        ("attach_scene", GF_FEVT_AttachScene),
        #("user_event", GF_FEVT_Event,
        ("quality_switch", GF_FEVT_QualitySwitch),
        ("visibility_hint", GF_FEVT_VisibililityHint),
        ("buffer_req", GF_FEVT_BufferRequirement),
        ("seg_size", GF_FEVT_SegmentSize),
        ("file_del", GF_FEVT_FileDelete)
    ]


#
# Constants definitions
#


#scheduler type
GF_FS_SCHEDULER_LOCK_FREE=0
GF_FS_SCHEDULER_LOCK=1
GF_FS_SCHEDULER_LOCK_FREE_X=2
GF_FS_SCHEDULER_LOCK_FORCE=3
GF_FS_SCHEDULER_DIRECT=4

#session flags
GF_FS_FLAG_LOAD_META=1<<1
GF_FS_FLAG_NO_BLOCKING=1<<2
GF_FS_FLAG_NO_GRAPH_CACHE=1<<3
GF_FS_FLAG_NO_MAIN_THREAD=1<<4
GF_FS_FLAG_NO_REGULATION=1<<5
GF_FS_FLAG_NO_PROBE=1<<6
GF_FS_FLAG_NO_REASSIGN=1<<7
GF_FS_FLAG_PRINT_CONNECTIONS=1<<8
GF_FS_FLAG_NO_ARG_CHECK=1<<9
GF_FS_FLAG_NO_RESERVOIR=1<<10
GF_FS_FLAG_FULL_LINK=1<<11


GF_PROP_FORBIDEN=0
GF_PROP_SINT=1
GF_PROP_UINT=2
GF_PROP_LSINT=3
GF_PROP_LUINT=4
GF_PROP_BOOL=5
GF_PROP_FRACTION=6
GF_PROP_FRACTION64=7
GF_PROP_FLOAT=8
GF_PROP_DOUBLE=9
GF_PROP_VEC2I=10
GF_PROP_VEC2=11
GF_PROP_VEC3I=12
GF_PROP_VEC3=13
GF_PROP_VEC4I=14
GF_PROP_VEC4=15
GF_PROP_PIXFMT=16
GF_PROP_PCMFMT=17
GF_PROP_STRING=18
GF_PROP_STRING_NO_COPY=19
GF_PROP_DATA=20
GF_PROP_NAME=21
GF_PROP_DATA_NO_COPY=22
GF_PROP_CONST_DATA=23
GF_PROP_POINTER=24
GF_PROP_STRING_LIST=25
GF_PROP_UINT_LIST=26
GF_PROP_SINT_LIST=27
GF_PROP_VEC2I_LIST=28


GF_FEVT_PLAY = 1
GF_FEVT_SET_SPEED = 2
GF_FEVT_STOP = 3
GF_FEVT_PAUSE = 4
GF_FEVT_RESUME = 5
GF_FEVT_SOURCE_SEEK = 6
GF_FEVT_SOURCE_SWITCH = 7
GF_FEVT_SEGMENT_SIZE = 8
GF_FEVT_ATTACH_SCENE = 9
GF_FEVT_RESET_SCENE = 10
GF_FEVT_QUALITY_SWITCH = 11
GF_FEVT_VISIBILITY_HINT = 12
GF_FEVT_INFO_UPDATE = 13
GF_FEVT_BUFFER_REQ = 14
GF_FEVT_CAPS_CHANGE = 15
GF_FEVT_CONNECT_FAIL = 16
GF_FEVT_USER = 17
GF_FEVT_PLAY_HINT = 18
GF_FEVT_FILE_DELETE = 19


GF_FS_ARG_HINT_NORMAL = 0
GF_FS_ARG_HINT_ADVANCED = 1<<1
GF_FS_ARG_HINT_EXPERT = 1<<2
GF_FS_ARG_HINT_HIDE = 1<<3
GF_FS_ARG_UPDATE = 1<<4
GF_FS_ARG_META = 1<<5
GF_FS_ARG_META_ALLOC = 1<<6
GF_FS_ARG_SINK_ALIAS = 1<<7


GF_CAPFLAG_IN_BUNDLE = 1
GF_CAPFLAG_INPUT = 1<<1
GF_CAPFLAG_OUTPUT = 1<<2
GF_CAPFLAG_EXCLUDED = 1<<3
GF_CAPFLAG_LOADED_FILTER = 1<<4
GF_CAPFLAG_STATIC = 1<<5
GF_CAPFLAG_OPTIONAL = 1<<6
